# chimera-swope

./: .gitignore  AGENTS.md  README.md  pyproject.toml
chimera_swope/cli/: ui.py
chimera_swope/controllers/: ds9acquisitiondisplay.py  ds9autodisplay.py
chimera_swope/instruments/: henriettabase.py  henriettainstrument.py  swopebase.py  swopecamera.py  swopedome.py  swopedomelamp.py  swopefan.py  swopefocuser.py  swoperotator.py  swopetelescope.py  swopeweatherstation.py  util.py
docs/: tcs_example.json
etc/: chimera.config  chimera_ccd.config
scripts/: create_observation_block.py  m2law_helper.py  observing_sequence.j2  pm_helper.py  rotator_client.py
tests/: test_ccd_chimera-cam.sh  test_ccd_chimera-filter.sh
tests/chimera_swope/: test_filterwheels.py
