[project]
name = "chimera-swope"
version = "0.1.0"
description = "Swope Telescope and Instruments chimera plugin"
license = "MIT"
authors = [
    { name = "William Schoenell", email = "wschoenell@gmail.com" },
    { name = "Paulo Henrique Silva", email = "ph.silva@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chimera",
    "henrietta",
    "matplotlib>=3.10.7",
    "nicegui>=3.2.0",
    "photutils>=2.3.0",
    "pywebview>=6.0",
    "swope",
]

[project.gui-scripts]
chimera-ui = "chimera_swope.cli.ui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chimera_swope"]

[tool.ruff.lint]
select = ["N", "I", "UP", "F"]

[tool.ruff.lint.flake8-copyright]
notice-rgx = "(?i)# SPDX-FileCopyrightText:\\s\\d{4}(-(\\d{4}|present))*"

[tool.uv.sources]
chimera = { path = "../chimera" }
swope = { path = "../../swope-python" }
henrietta = { path = "../../henrietta-python" }

